# football_wc_platform

./: .gitignore  CHUNK8_SETUP.md  PROJECT_HEALTH_REPORT.md  PROJECT_STATUS.md  README.DEV.md  README.md  test_sqlalchemy_only.py  test_sqlalchemy_submodules.py
platform/backend-api/: README.md  alembic.ini  debug_config_import.py  debug_import.py  debug_settings.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_auth_flow.py  test_engine.py  test_module.py  trace_imports.py
platform/backend-api/alembic/: env.py
platform/backend-api/alembic/versions/: 288e375e2a3e_add_auction_tables.py  a1b2c3d4e5f6_add_max_position_columns.py
platform/backend-api/app/: __init__.py  main.py
platform/backend-api/app/api/routes/: health.py  predictions.py
platform/backend-api/app/api/v1/: router.py
platform/backend-api/app/api/v1/endpoints/: analytics.py  auction_players.py  (+10 more)
platform/backend-api/app/core/: __init__.py  config.py  database.py  logging.py
platform/backend-api/app/jobs/: __init__.py  ingest_features.py  match_scraper_job.py
platform/backend-api/app/models/: __init__.py  auction_models.py  base.py
platform/backend-api/app/repositories/: __init__.py
platform/backend-api/app/schemas/: __init__.py  auth.py  common.py  schemas.py
platform/backend-api/app/services/: __init__.py  advanced_tournament_service.py  auction_engine.py  auction_ws.py  match_scraper.py  prediction_history.py  prediction_service.py  recency_weighting.py  scoring_engine.py  state_store.py  tournament_service.py
platform/backend-api/app/utils/: security.py
(+263 files in other folders)
